--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Main website",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"npx tailwindcss -i ./styles/style.css -o ./styles/output.css --watch"
   },
   "author": "Matt Burseth",
   "license": "ISC",
